# onyx-demoapp

./: CMakeLists.txt  README.md
src/: .CMakeLists.txt.swp  .demo_application.cpp.swp  .demo_application.h.swp  .main.cpp.swp  CMakeLists.txt  demo_application.cpp  demo_application.h  demo_logger.cpp  demo_logger.h  demo_view.cpp  demo_view.h  main.cpp
